fixes #2621 search box and search button alignment on firefox.

--- a/app/assets/stylesheets/bootstrap_and_overrides.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.scss
@@ -122,3 +122,13 @@ border-bottom-color: #ffffff;
 #about .tab-pane{
   max-height: 420px;
 }
+
+.autocomplete-clear {
+  height: 18px;
+  margin-bottom: 0;
+  vertical-align: middle;
+}
+
+.form-search .btn{
+  height: 30px;
+}
